--- a/styles/index.css
+++ b/styles/index.css
@@ -3,96 +3,344 @@ body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(231, 233, 255);
-}
-
-.wrapper{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-}
-
-.content{
-    width: 800px;
-}
-
-.table{
-    display: flex;
-    flex-direction: row;
-}
-
-.table-column{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    background-color: rgb(255, 255, 255);
-    margin: 1rem;
-    font-size: 18px;
-    padding: 1rem;
-    border-radius: 30px;
-    box-shadow: 5px 5px 10px #75757550 ;
 }
 
-.table-column .computer-name{
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.table-column .timer{
-    font-size: 30px;
-    align-items: center;
-}
-
-.table-column .start{
-    font-size: 20px;
-}
-
-.computer-control--timer{
+.body-wrapper{
+    width: 100vw;
+    /* height: 100vh; */
+    content: "";
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.computer-control--buttons{
-    display: flex;
-    flex: 1;
     flex-direction: row;
-}
-
-.computer-control--buttons button{
-    display: flex;
-    width: 100%;
-    height: 30px;
     justify-content: center;
     align-items: center;
-    padding: 0.7rem;
-    margin: 0.2rem;
+    margin-top: 4rem;
+}
+
+.component-net{
+    width: 250px;
     background-color: white;
+    padding: 1rem;
+    border-radius: 20px;
+    margin: 2rem;
+    box-shadow: 5px 5px 10px #00000027;
+    position: relative;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-.computer-icon img{
-    margin: 1rem 0;
-    width: 100px;
+.component-net--name{
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
 }
 
-.computer-control--buttons button:hover{
-    margin-bottom: -50px;
-}
-
-.logo{
-    display: flex;
+.icon-computer{
     width: 100%;
+    height: 8rem;
+    display: block;
+    background-image: url(../icons/computer_30842.png);
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0.5rem 0 0.5rem 0px;
+}
+
+.component-net b{
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.component-net--timer{
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+
+}
+
+.component-net--now{
+    font-size: 1.3rm;
+    text-align: center;
+    margin-top: -5px;
+
+}
+
+.divider{
+    display: block;
+    width: 100%;
+    height: 1.5px;
+    margin: 1rem 0 1cqw 0;
+    content: "";
+    background-color: black;
+}
+
+.component-net--services{
+    content: "";
+}
+
+.row{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    font-weight: bold;
+    font-size: 0.98rem;
+    margin: 0.3rem 0;
+}
+
+.col{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+}
+
+.services-button{
+    width: 20px;
+    height: 20px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    font-weight: bold;
-    color: #CE1B39;
+    background-color: #ffffff;
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    cursor: pointer;
 }
 
-.logo img{
+.services-qtd{
+    width: 65px;
+    height: 20px;
+}
+
+.services-value{
+    width: 98px;
+    display: block;
+    border-radius: 3px ;
+    border-style: solid;
+    border-width: 2px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.button-start{
+    width: 80%;
+    font-weight: bold;
+    padding: 0.3rem 0.3rem;
+    color: white;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 20px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50% , 0);
+    cursor: pointer;
+
+}
+
+.final-value{
+    margin-top: 3.5rem;
+    font-weight: bold;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.component-net .start{
+    background-color: #2572CB;
+    visibility: visible;    
+}
+
+.component-net .stop{
+    background-color: #a30000;
+    visibility: hidden;    
+}
+
+.component-net .reset{
+    background-color: #00892b;
+    visibility: hidden;
+}
+
+.help{
+    width: 0.5rem;
+    height: 1rem;
+    content: "";
+    position: absolute;
+    left: 0;
+    background-image: url();
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 3px ;
+    border-style: solid;
+    border-width: 1px;
+    padding: 0.1rem;
+    background-color: #2572CB;
+    -webkit-mask-image: url(../icons/question-solid.svg);
+    mask-image: url(../icons/question-solid.svg);
+}
+
+.pause{
+    width: 0.5rem;
+    height: 1rem;
+    content: "";
+    position: absolute;
+    left: 100%;
+    transform: translateX(-100%);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 3px ;
+    border-style: solid;
+    border-width: 1px;
+    padding: 0.1rem;
+    background-color: #a30000;
+    -webkit-mask-image: url(../icons/pause-solid.svg);
+    mask-image: url(../icons/pause-solid.svg);
+    visibility: hidden;
+}  
+
+.card-nav{
+    display: flex;
+    position: relative;   
+}
+
+.navbar{
+    display: flex;
+    flex-direction: row;
+    width: 974px;
+    /* background-color: green; */
+    position: absolute;
+    
+    top: 3rem;
+    left: 50%; 
+    transform: translateX(-50%);
+
+}
+
+.post-icon{
+    position: absolute;
+    left: 50%; 
+    transform: translateX(-50%);
     width: 200px;
+    height: 30px;
+    background-image: url("../icons/postnet-logo.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.btn-rearrange{
+    position: absolute;
+    left: 100%;
+    transform: translateX(-100%);
+    height: 30px;
+    width: 30px;
+    background-color: #2572CB;
+    -webkit-mask-image: url("../icons/repeat-solid.svg");
+    mask-image: url("../icons/repeat-solid.svg");
+    cursor: pointer;
+}
+
+.modal{
+    position: absolute;
+    /* visibility: hidden; */
+    /* display: none; */
+}
+
+.modal-backdrop{
+    position: relative;
+    display: flex;
+    visibility: visible;
+    width: 100vw;
+    height: 100vh;
+    background-color: #2572cb8f;
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+}
+
+.modal-content{
+    font-size: 15px;
+    /* width: 600px;
+    height: 300px; */
+    display: block;
+    z-index: 11;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.333);
+    padding: 1rem;
+}
+
+#botao-temporario{
+    display: block;
+    /* width: 100%; */
+}
+
+.modal-nets{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    /* background-color: #a30000; */
+}
+
+.modal-col{
+    width: 12rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    justify-content: center;
+    align-items: center;
+}
+
+.rearrange-icon{
+    background-image: url("../icons/repeat-solid.svg");
+    width: 1.5rem;
+    height: 1.5rem;
+    content: "";
+}
+
+.button-modal{
+    width: 8rem;
+    font-weight: bold;
+    padding: 0.3rem 0.3rem;
+    color: white;
+    background-color: #2572CB;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.net-block{
+    height: 3rem;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    font-weight: bold
+}
+
+.modal-row span{
+    font-size: 23px;
+    font-weight: bolder;
+    margin-bottom: 1dvh;
 }
